--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,7 +39,7 @@ RSpec:
   stage: test
   image: $CONTAINER_TEST_IMAGE
   variables:
-    SLACK_BOT_API_TOKEN: 'foobar'
+    SLACK_API_TOKEN: 'foobar'
     AIRBRAKE_PROJECT_ID: 'DUMMY'
     AIRBRAKE_PROJECT_KEY: 'DUMMY'
   script:
