--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,13 +18,25 @@ services:
       PORT: '3001'
       RAILS_ENV: 'development'
       REDIS_URL: 'redis://redis:6379/'
-      LOG_LEVEL: 'DEBUG'
-      DROPBOX_API_TOKEN:
-      DROPBOX_ROOT_PATH:
-      SLACK_API_TOKEN:
+      LOG_LEVEL: 'INFO'
     ports:
       - '3001:3001'
     volumes:
-      - .:/srv/app
+      - .:/src/app
+    depends_on:
+      - redis
+  mick:
+    build: .
+    image: registry.gitlab.com/mixlr/slackcast
+    command: bundle exec rails runner bin/mick
+    stdin_open: true
+    tty: true
+    environment:
+      <<: *development
+      SLACK_API_TOKEN:
+      DROPBOX_API_TOKEN:
+      DROPBOX_ROOT_PATH:
+    volumes:
+      - .:/src/app
     depends_on:
       - redis
