Move dpl to Gemfile

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,7 +54,6 @@ Deploy:
   variables:
     APP_NAME: 'slackcast'
   script:
-    - gem install dpl
-    - dpl --provider=heroku --app=$APP_NAME --api-key=$HEROKU_API_KEY
+    - bundle exec dpl --provider=heroku --app=$APP_NAME --api-key=$HEROKU_API_KEY
   only:
     - master
